Validation and file security (#128)
* Read path to files from .env

* Validate API calls + tests

* Bug fix (query never ended)

* Code tidy

* Removes most of the command line calls, rationalises validation of input data through APIS + increased tests

* Check supplied files don't contain a path, reduce places where FILES_LOCATION is read from environment